--- a/styles.css
+++ b/styles.css
@@ -1,67 +1,74 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 * {
-    margin: 0;
     padding: 0;
+    margin: 0;
     box-sizing: border-box;
     font-family: "Inter" , sans-serif;
 }
+
 
 html {
     scroll-behavior: smooth;
 }
 
-body {
-    max-width: 100vh;
-}
-
-nav {
-    height: 80px;
+.light__header {
+    margin-left: auto;
+    margin-right: auto;
     display: flex;
-    justify-content: space-between;
+    max-width: 1280px;
     align-items: center;
-}
-
-.nav__links {
-    display: flex;
-}
-
-img {
-    width: 100%;
+    justify-content: space-between;
 }
 
 .logo {
     width: 40px;
-    margin-right: 0.75rem;
-
+    margin: 0 12px 0px 0px;
 }
 
-li {
-    list-style-type: none;
+.nav__link--logo {
+    display: flex;
+    font-size: 0px 24px 0px 0px;
+    text-decoration: none;
+    font-weight: bold;
+    color: #243e63;
+    margin: 0px 24px 0px 0px;
+    padding: 0px 0px 4px;
+    border-bottom-width: 0px;
+    align-items: center;
 }
 
-.row {
+.nav__container {
+    display: flex;
+    justify-content: space-between;
     width: 100%;
     max-width: 1200px;
+    align-items: center;
     margin: 0 auto;
 }
 
-/* NAVIGATION BAR */
-
 .nav__link {
-    margin-left: 16px;
+    margin: 24px;
+    padding: 8px;
+    font-size: 14px;
     text-decoration: none;
-    font-size: 20px;
     color: #243e63;
+    font-weight: bold;
 }
 
-.logo__right {
-   display: flex;
-   align-items: center;
-   border-bottom-width: 0;
-   font-weight: bold;
-   margin-left: 0;
-   font-size: 1.5rem;
+.nav__link:hover {
+    text-decoration: underline;
 }
 
-/*Main */
+.nav__link--primary {
+    background-color:#6415ff;
+    text-decoration: none;
+    border-radius: 20px;
+    border-bottom-width: 0;
+    padding: 12px 32px;
+    color: rgb(247, 250, 252)
 
+}
+
+.nav__links {
+
+}
