--- a/styles.css
+++ b/styles.css
@@ -1,141 +1,95 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: "Inter" , sans-serif;
-    border-width: 0;
-    border-style: solid;
-    border-color: rgb(226, 232, 240);
+ padding: 0;
+ margin: 0;
+ box-sizing: border-box;
+ font-family: "Inter", sans-serif;  
 }
-
-.app {
-    min-height: 100vh;
-    overflow: hidden;
-    padding: 2rem;
-}
-
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
-.light__header {
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
-    max-width: 1280px;
-    align-items: center;
-    justify-content: space-between;
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
+nav {
+  height: 44px;
+  display: flex;
+}
+
+ul {
+  display: flex;
+}
+
+li {
+  list-style-type: none;
 }
 
 .logo {
-    width: 40px;
-    margin: 0 12px 0px 0px;
+  width: 40px;
+  margin: 0 12px 0 0;
 }
-
-.row {
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
-h1 {
- font-size: 48px;
- color: #1a202c;   
-}
-
-p {
-    color: #243e63;
-    font-size: 18px;
-    margin: 32px 0;
-}
-
-img {
-    margin-top: 1rem;
-    width: 100%;
-    opacity: 0.5;
-}
-
-/* NAVIGATION */
 
 .nav__link--logo {
-    display: flex;
-    font-size: 24px;
-    text-decoration: none;
-    font-weight: bold;
-    color: #243e63;
-    margin: 0px 24px 0px 0px;
-    padding: 0px 0px 4px;
-    border-bottom-width: 0px;
-    align-items: center;
+  display: flex;
+  align-items: center;
+  font-weight: bold;
+  margin-left: 0px;
+  font-size: 1.5rem !important;
 }
 
-.nav__container {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    max-width: 1200px;
-    align-items: center;
-    margin: 0 auto;
+
+.row {
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+}
+
+a {
+  text-decoration: none;
 }
 
 .nav__link {
-    margin: 24px;
-    padding: 8px;
-    font-size: 14px;
-    text-decoration: none;
-    color: #243e63;
-    font-weight: bold;
-}
-
-.nav__link:hover {
-    text-decoration: underline;
+  margin: 0 24px;
+  text-decoration: none;
+  font-size: 14px;
+  font-weight: bold;
+  color: #243e63;
+  padding: 0 0 4px;
 }
 
 .nav__link--primary {
-    background-color:#6415ff;
-    text-decoration: none;
-    border-radius: 20px;
-    border-bottom-width: 0;
-    padding: 12px 32px;
-    color: rgb(247, 250, 252)
+  color: #f7fafc;
+  background: #6415ff;
+  font-size: 14px;
+  font-weight: bold;
+  padding: 12px 32px;
+  border-radius: 60px;
+  border-bottom-width: 0px;
+}
+
+.container {
+  min-height: 100vh;
+  overflow: hidden;
+  padding: 2rem;
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 
 }
 
-/* LANDING */
-
-.two--column__container {
-    position: relative;
+.nav__container {
+width: 100%;
+max-height: 1280px;
+padding: 0 24px 0 0;
+display: flex;
+justify-content: space-between;
+align-items: center;
+margin: 0 auto;
 }
 
-.two--column__input {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
 
-.two--column__left {
-    max-width: none;
-    width:40%;
-    text-align: left;
-    flex-direction: column;
-}
-
-.left--column__para {
-    font-size: 18px;
-    margin: 32px 0;
-    color: #243e63;
-}
-
-.two--column__right {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.illustration__container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
