--- a/styles.css
+++ b/styles.css
@@ -1,95 +1,158 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 * {
- padding: 0;
- margin: 0;
- box-sizing: border-box;
- font-family: "Inter", sans-serif;  
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-nav {
-  height: 44px;
-  display: flex;
-}
-
-ul {
-  display: flex;
-}
-
-li {
-  list-style-type: none;
-}
-
-.logo {
-  width: 40px;
-  margin: 0 12px 0 0;
-}
-
-.nav__link--logo {
-  display: flex;
-  align-items: center;
-  font-weight: bold;
-  margin-left: 0px;
-  font-size: 1.5rem !important;
-}
-
-
-.row {
-  width: 100%;
-  max-width: 1280px;
-  margin: 0 auto;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Inter", sans-serif;
 }
 
 a {
   text-decoration: none;
 }
 
-.nav__link {
-  margin: 0 24px;
-  text-decoration: none;
-  font-size: 14px;
-  font-weight: bold;
+.row {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.purple {
+  color:rgb(100, 21, 255);
+}
+
+
+
+/* NAVIGATION */
+
+.nav__container {
+  padding: 32px;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navi__logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.navi__logo--img--wrapper {
+  width: 40px;
+  height: 40px;
+  margin-right: 12px;
+}
+
+.navi__logo--img {
+  width: 100%;
+  height: 100%;
+}
+
+.logo--title {
   color: #243e63;
-  padding: 0 0 4px;
+  font-size: 24px;
+  font-weight: bold;
+  padding-bottom: 0.25rem;
+  transition: all 300ms ease;
+}
+
+.navi__logo:hover .logo--title {
+  color: rgb(100, 21, 255);
+  box-shadow: outset;
+}
+
+.nav__links {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  list-style-type: none;
+  color: #243e63;
+}
+
+.nav__link {
+  color: #243e63;
+  font-weight: bold;
+  font-size: 14px;
+  margin: 0 24px;
+  padding-bottom: 0.25rem;
+  border-bottom: 2px solid transparent;
+  transition: all 300ms ease;
+  box-shadow: outset;
 }
 
 .nav__link--primary {
-  color: #f7fafc;
-  background: #6415ff;
-  font-size: 14px;
   font-weight: bold;
+  font-size: 14px;
+  margin: 0 24px;
   padding: 12px 32px;
-  border-radius: 60px;
-  border-bottom-width: 0px;
+  transition: all 300ms ease;
+  color: white;
+  background-color:rgb(100, 21, 255);
+  border-radius: 80px;
+
 }
 
-.container {
-  min-height: 100vh;
-  overflow: hidden;
-  padding: 2rem;
-  max-width: 100%;
+/* HEADER THINGS */
+
+.header__container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5rem;
+}
+
+.header__info {
+  width: 40%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-
 }
 
-.nav__container {
-width: 100%;
-max-height: 1280px;
-padding: 0 24px 0 0;
-display: flex;
-justify-content: space-between;
-align-items: center;
-margin: 0 auto;
+.header__img--wrapper {
+  width: 60%;
 }
+
+.header__img {
+  width: 100%;
+}
+
+.header__title {
+  font-size: 48px;
+  color: #1a202c;
+  font-weight: bold;
+  line-height: 1.25;
+  text-align: left;
+}
+
+.header--para {
+  margin: 2rem 0;
+  font-size: 18px;
+  text-align: left;
+  font-weight: 400;
+}
+
+.header__customers--info {
+  margin-top: 5rem;
+  color: rgb(36, 62, 99);
+  opacity: 0.5;
+  font-size: 0.75rem;
+  font-weight: 700;
+}
+
+.customers__logo--wrapper {
+  width: 80%;
+  margin-top: 1rem;
+}
+
+.customers--logo__pic {
+  width: 100%;
+}
+
+
+
+
+
 
 
