--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,8 @@ a {
   text-decoration: none;
 }
 
+
+
 .row {
   width: 100%;
   max-width: 1200px;
@@ -18,6 +20,12 @@ a {
 
 .purple {
   color:rgb(100, 21, 255);
+}
+
+h5 {
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
 }
 
 
@@ -150,8 +158,148 @@ a {
   width: 100%;
 }
 
+.header__form--bg {
+  padding: 0.25rem 0;
+  border: 2px solid rgba(36, 62, 99, 0.1);
+  border-radius: 80px;
+}
 
+.header__form {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
 
+.input {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 465px;
+  width: 100%;
+}
+
+.header--button {
+  padding: 1.25rem 2rem;
+  border: none; 
+  background-color: rgb(100, 21, 255);
+  border-radius: 80px;
+  font-weight: 500;
+  font-size: 16px;
+  color: white;
+  cursor: pointer;
+  margin-left: auto;
+}
+
+.header__input {
+  border: 0;
+  border-radius: 9999px;
+  color: black;
+  font-weight: 500;
+  font-size: 16px;
+  z-index: 2;
+}
+
+.header__input:focus {
+  outline: none;
+}
+
+.header__form--bg:hover {
+  border-color: rgba(100, 21, 255);
+}
+
+.header__form--bg:focus-within {
+  border-color: rgb(100, 21, 255);
+}
+
+.header__input::placeholder {
+  color: rgba(36, 62, 99, 0.3);
+  font-size: 16px;
+  font-weight: 500;
+}
+
+/* MAIN */
+
+.main__container {
+  padding: 6rem 0;
+}
+
+.features--container {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.features--info {
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
+  margin-bottom: 4rem;
+}
+
+.features--info__heading {
+  font-size: 3rem;
+  font-weight: 900;
+  letter-spacing: 0.25rem;
+  color: rgb(36, 62, 99);
+  text-align: center;
+}
+
+.features--info__para {
+  text-align: center;
+  font-size: 1.125rem;
+  color: rgb(124, 139, 161);
+  margin-top: 1rem 0;
+  font-weight: 500;
+  line-height: 2;
+  width: 60%;
+
+}
+
+.services--list {
+  display: flex;
+  flex-wrap: wrap;
+  list-style-type: none;
+}
+
+.service--content {
+  margin: 8px 0px 0px 16px;
+  padding: 32px 8px;
+}
+.service--wrapper {
+  width: calc(100% / 3);
+  display: flex;
+}
+
+.service--title {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 1;
+  letter-spacing: 0.025em;
+  margin: 16px 0px 0px;
+  color:rgb(36, 62, 99);
+}
+
+.service--para {
+  margin-top: 1rem;
+  font-weight: 500;
+  line-height: 2;
+  color: rgb(124, 139, 161);
+}
+
+.service__img--wrapper {
+  padding: 2rem;
+  border: 1px solid rgb(226, 232, 240);
+  border-radius: 50%;
+  flex-shrink: 0;
+  width: 2rem;
+  height: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 2rem;
+}
 
 
 
