--- a/styles.css
+++ b/styles.css
@@ -376,3 +376,151 @@ h5 {
 }
 
 
+/* GET STARTED */
+
+.steps--container {
+  padding: 6rem 0;
+}
+
+.steps--wrapper {
+  display: flex;
+}
+
+.steps__img {
+  width: 100%;
+  height: 100%;
+}
+
+.steps__img--wrapper {
+  display: flex;
+  width: 50%;
+  height: 100%;
+  margin-left: 1.5rem;
+  padding-top: 3.5rem;
+}
+
+.steps__info {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  margin-left: 1.5rem;
+}
+
+.steps__info--title {
+  margin-top: 1rem;
+  font-size: 3rem;
+  font-weight: 900;
+  line-height: 1.25;
+  letter-spacing: 0.025rem;
+  color: rgb(36, 62, 99);
+}
+
+.steps__info--para {
+  margin-top: 0.75rem;
+  max-width: 20rem;
+  font-size: 500;
+  line-height: 2;
+  color: rgb(113, 128, 150);
+}
+
+.steps__lists {
+  display: flex;
+  flex-direction: column;
+  margin-top: 2rem;
+}
+
+.steps__list {
+  display: flex;
+  margin-bottom: 2rem;
+}
+
+.steps__list--info {
+  display: flex;
+  flex-direction: column;
+  margin-left: 1.5rem;
+}
+
+.steps__list--info--title {
+  font-size: 1.25rem;
+  font-weight: 600;
+  line-height: 1;
+  color: rgb(36, 62, 99);
+}
+
+.steps__list--num {
+  font-size: 2.25rem;
+  font-weight: 600;
+  line-height: 1;
+  color: rgb(203, 213, 224);
+}
+
+/* PRICING
+
+.pricing__title{
+  font-size: 3rem;
+  font-weight: 900;
+  letter-spacing: 0.25rem;
+  color: rgb(36, 62, 99);
+  text-align: center;
+}
+
+.pricing--container {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.pricing__info {
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
+  margin-bottom: 4rem;
+  
+}
+
+.pricing__info--para {
+  text-align: center;
+  font-size: 1.125rem;
+  color: rgb(124, 139, 161);
+  margin-top: 1rem 0;
+  font-weight: 500;
+  line-height: 2;
+  width: 60%;
+}
+*/
+
+/* VALUES */
+
+.values--container {
+  padding: 6rem 0;
+}
+
+.values--wrapper {
+  display: flex;
+}
+
+.values__info {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  margin-right: 1.5rem;
+}
+
+.values__info--title {
+  margin-top: 1rem;
+  font-size: 3rem;
+  font-weight: 900;
+  line-height: 1.25;
+  letter-spacing: 0.025rem;
+  color: rgb(36, 62, 99);
+}
+
+.values__info--para {
+  margin-top: 1rem;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1.625;
+  color: rgb(124, 139, 161);
+}
