--- a/styles.css
+++ b/styles.css
@@ -454,43 +454,6 @@ h5 {
   color: rgb(203, 213, 224);
 }
 
-/* PRICING
-
-.pricing__title{
-  font-size: 3rem;
-  font-weight: 900;
-  letter-spacing: 0.25rem;
-  color: rgb(36, 62, 99);
-  text-align: center;
-}
-
-.pricing--container {
-  display: flex;
-  flex-direction: column;
-  width: 80%;
-  margin: 0 auto;
-}
-
-.pricing__info {
-  display: flex;
-  flex-direction: column;
-  justify-items: center;
-  align-items: center;
-  margin-bottom: 4rem;
-  
-}
-
-.pricing__info--para {
-  text-align: center;
-  font-size: 1.125rem;
-  color: rgb(124, 139, 161);
-  margin-top: 1rem 0;
-  font-weight: 500;
-  line-height: 2;
-  width: 60%;
-}
-*/
-
 /* VALUES */
 
 .values--container {
@@ -523,4 +486,237 @@ h5 {
   font-weight: 500;
   line-height: 1.625;
   color: rgb(124, 139, 161);
+}
+
+.values__info--link {
+  margin-top: 2rem;
+  color: white;
+  background-color: rgb(100, 21, 255);
+  padding: 1rem;
+  display: flex;
+  font-size: 0.875rem;
+  border-radius: 80px;
+  text-align: center;
+  justify-content: center;
+  max-width: 9rem;
+  font-weight: 700;
+  transition: all 300ms ease;
+}
+
+.values__info--link:hover {
+  background-color: rgb(91, 21, 215);
+}
+
+.values__img--wrapper {
+  display: flex;
+  width: 50%;
+  height: 100%;
+  margin-right: 1.5rem;
+}
+
+.values__img {
+  width: 100%;
+  height: 100%;
+}
+
+.values__small--info {
+  display: flex;
+  margin: 2rem 0;
+}
+
+.values__small--container {
+  display: flex;
+  flex-direction: column;
+}
+
+.values__small--wrapper {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  margin-bottom: 1rem;
+  margin-left: -0.6rem;
+}
+
+.values__small--img--wrapper {
+  width: 3.5rem;
+  height: 2.5rem;
+  margin-right: 0.5rem;
+}
+
+.values__small--title {
+  margin-left: 0.75rem;
+  font-size: 1.25rem;
+  font-weight: 700;
+  color: rgb(36, 62, 99);
+}
+
+.values__small--para {
+  line-height: 1.625;
+  color: rgb(113, 128, 150);
+}
+
+/* PRICING */
+
+.pricing__info--title{
+  font-size: 3rem;
+  font-weight: 900;
+  letter-spacing: 0.25rem;
+  color: rgb(36, 62, 99);
+  text-align: center;
+}
+
+.pricing--container {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.pricing__info {
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
+  margin-bottom: 4rem;
+  
+}
+
+.pricing__info--para {
+  text-align: center;
+  font-size: 1.125rem;
+  color: rgb(124, 139, 161);
+  margin-top: 1rem 0;
+  font-weight: 500;
+  line-height: 2;
+  width: 60%;
+}
+
+.price__subtitle {
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  font-size: 1rem;
+  text-align: center;
+}
+
+.price__container {
+  display: flex;
+  flex-direction: column;
+  box-shadow: 5px 5px 10px rgba(235, 232, 232, 0.5);
+  margin-bottom: 3rem;
+  border: 1px solid rgb(226, 232, 240);
+  border-radius: 15px;
+  padding: 2em;
+}
+
+.price--wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 2rem 5.5rem;
+}
+
+.price__subtitle {
+  font-size: 1.25rem;
+  font-weight: 700;
+  color: rgb(26, 36, 44);
+}
+
+.price__title {
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
+  font-size: 2.25rem;
+  font-weight: 700;
+  color: rgb(26, 36, 44);
+  font-size: 48px;
+}
+
+.pricing__list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: 0 2rem;
+}
+
+.price__monthly {
+  font-weight: 700;
+  letter-spacing: 0.1rem;
+  color: rgb(160, 174, 192);
+}
+
+.prices__main {
+  font-size: 1.25rem;
+  font-weight: 700;
+  letter-spacing: 0.025rem;
+  color: rgb(26, 36, 44);
+}
+
+.feature {
+  margin-top: 0.4rem;
+  font-weight: 700;
+  color: rgb(113, 128, 150);
+  font-size: 0.9rem;
+  line-height: 24px;
+  letter-spacing: normal;
+}
+
+.purple--bg {
+  background-color: rgb(100, 21, 255);
+  background-image: linear-gradient(
+    135deg,
+    rgb(76, 81, 191) 0%,
+    rgb(102, 126, 234) 100%
+  );
+}
+
+.price__btn1 {
+  padding: 16px 48px;
+  font-size: 14px;
+  font-weight: 700;
+  background: linear-gradient(
+    115deg,
+    rgb(56, 178, 172) 0%,
+    rgb(129, 230, 217) 100%
+  );
+  border-radius: 80px;
+  transition: all 300ms ease;
+}
+
+.price__btn2 {
+  padding: 16px 48px;
+  font-size: 14px;
+  font-weight: 700;
+  background-color: rgb(247, 250, 252);
+  color: rgb(100, 11, 255);
+  border-radius: 80px;
+  transition: all 300ms ease;
+}
+
+.price__btn3 {
+  padding: 16px 48px;
+  font-size: 14px;
+  font-weight: 700;
+  background: linear-gradient(
+    115deg,
+    rgb(245, 101, 101) 0%,
+    rgb(254, 178, 178) 100%
+  );
+  border-radius: 80px;
+  transition: all 300ms ease;
+}
+
+.price__btn1:hover, 
+.price__btn2:hover,
+.price__btn3:hover {
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+  transform: translate(5px, -5px);
+}
+
+.price--wrapper {
+  padding: 1em;
+}
+
+.text--white {
+  color: white;
 }
