--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -17,7 +17,7 @@ a {
 }
 
 .purple {
-  color:rgb(100, 21, 255);
+  color: rgb(100, 21, 255);
 }
 
 h5 {
@@ -25,8 +25,6 @@ h5 {
   text-transform: uppercase;
   letter-spacing: 0.1rem;
 }
-
-
 
 /* NAVIGATION */
 
@@ -97,9 +95,8 @@ h5 {
   padding: 12px 32px;
   transition: all 300ms ease;
   color: white;
-  background-color:rgb(100, 21, 255);
+  background-color: rgb(100, 21, 255);
   border-radius: 80px;
-
 }
 
 /* HEADER THINGS */
@@ -179,7 +176,7 @@ h5 {
 
 .header--button {
   padding: 1.25rem 2rem;
-  border: none; 
+  border: none;
   background-color: rgb(100, 21, 255);
   border-radius: 80px;
   font-weight: 500;
@@ -260,7 +257,6 @@ h5 {
   font-weight: 500;
   line-height: 2;
   width: 60%;
-
 }
 
 .services--list {
@@ -288,7 +284,7 @@ h5 {
   line-height: 1;
   letter-spacing: 0.025em;
   margin: 16px 0px 0px;
-  color:rgb(36, 62, 99);
+  color: rgb(36, 62, 99);
 }
 
 .service__img--wrapper {
@@ -338,7 +334,6 @@ h5 {
   margin-bottom: 16px 0 0;
 }
 
-
 .quality__para {
   color: #7c8ba1;
   font-size: 16px;
@@ -374,7 +369,6 @@ h5 {
 .quality__img {
   width: 100%;
 }
-
 
 /* GET STARTED */
 
@@ -557,7 +551,7 @@ h5 {
 
 /* PRICING */
 
-.pricing__info--title{
+.pricing__info--title {
   font-size: 3rem;
   font-weight: 900;
   letter-spacing: 0.25rem;
@@ -566,10 +560,16 @@ h5 {
 }
 
 .pricing--container {
+  padding: 96px 0;
   display: flex;
   flex-direction: column;
   width: 80%;
   margin: 0 auto;
+}
+
+.pricing__row {
+  display: flex;
+  flex-direction: column;
 }
 
 .pricing__info {
@@ -578,7 +578,6 @@ h5 {
   justify-items: center;
   align-items: center;
   margin-bottom: 4rem;
-  
 }
 
 .pricing__info--para {
@@ -634,9 +633,10 @@ h5 {
 
 .pricing__list {
   display: flex;
+  position: relative;
   flex-wrap: wrap;
-  justify-content: space-around;
-  margin: 0 2rem;
+  align-items: center;
+  justify-content: center;
 }
 
 .price__monthly {
@@ -706,7 +706,7 @@ h5 {
   transition: all 300ms ease;
 }
 
-.price__btn1:hover, 
+.price__btn1:hover,
 .price__btn2:hover,
 .price__btn3:hover {
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
@@ -719,4 +719,124 @@ h5 {
 
 .text--white {
   color: white;
+}
+
+/*TESTIMONIALS*/
+
+.testimonials__container {
+  padding: 6rem 0;
+}
+
+.testimonials--wrapper {
+  display: flex;
+}
+
+.testimonials__info {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  margin-right: 1.5rem;
+}
+
+.testimonials__info--subtitle {
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  font-size: 1rem;
+}
+
+.testimonials__info--title {
+  margin-top: 1rem;
+  font-size: 3rem;
+  font-weight: 900;
+  line-height: 1.25;
+  letter-spacing: 0.025em;
+  color: rgb(36, 62, 99);
+}
+
+.test__info--para {
+  margin-top: 1rem;
+  font-size: 1.125rem;
+  font-weight: 500;
+  line-height: 1.625;
+  color: rgb(124 139 161);
+}
+
+.test__info--para2 {
+  margin-top: 1rem;
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 1.625;
+  color: rgb(46, 62, 99);
+}
+
+
+.test__img--wrapper {
+  display: flex;
+  width: 50%;
+  height: 100%;
+  margin-right: 3.5rem;
+}
+
+.test__img {
+  width: 100%;
+  height: 100%;
+}
+
+.test__star-img--wrapper {
+  margin-top: 1.5rem;
+  width: 8rem;
+  height: 2rem;
+}
+
+.star {
+  color: rgb(244, 176, 41);
+}
+
+.testimonial--title2 {
+  margin-top: 1rem;
+  font-size: 1.3rem;
+  font-weight: 700;
+  line-height: 1.25;
+  letter-spacing: 0.025em;
+  color: rgb(36, 62, 99);
+}
+
+.customer__testimonial--wrapper {
+  display: flex;
+  align-items: center;
+  margin-top: 2rem;
+}
+
+.customer__testimonial--img--wrapper {
+  width: 70px;
+  height: 70px;
+}
+
+.customer__testimonial--img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+
+.testimonial--title2 {
+  font-size: 1.3rem;
+  font-weight: 700;
+  line-height: 1.25;
+  letter-spacing: 0.025em;
+  color: rgb(36, 62, 99);
+}
+
+.customer__title--wrapper {
+  display: flex;
+  flex-direction: column;
+  margin-left: 1.5rem;
+  justify-content: flex-start;
+}
+
+.test__info--para2 {
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 1.625;
+  color: rgb(124 139 161);
 }
