--- a/styles.css
+++ b/styles.css
@@ -370,7 +370,7 @@ h5 {
   width: 100%;
 }
 
-/* GET STARTED */
+/* STEPS */
 
 .steps--container {
   padding: 6rem 0;
@@ -840,3 +840,118 @@ h5 {
   line-height: 1.625;
   color: rgb(124 139 161);
 }
+
+/* GET STARTED */
+
+.background--container {
+  padding: 80px;
+  width: 100%;
+  position:relative;
+  overflow: hidden;
+  background-color: #6415ff;
+  border-radius: 0.5rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border-radius: 0.5rem;
+}
+
+.get--started__row {
+  margin: 0px 111px;
+  padding: 0px 32px;
+}
+
+.getstarted__text {
+  font-weight: 700;
+  font-size: 25px;
+  text-align: left;
+}
+
+.link--1 {
+  border: none;
+  background-color: #f56565;
+  border-radius: 80px;
+  font-weight: 500;
+  font-size: 16px;
+  color: white;
+  cursor: pointer;
+  margin-left: auto;
+  padding: 1.25rem 2rem;
+}
+
+.link--2 {
+  border: none;
+  background-color: #f56565;
+  border-radius: 80px;
+  font-weight: 500;
+  font-size: 16px;
+  color: white;
+  cursor: pointer;
+  margin-left: auto;
+  padding: 1.25rem 2rem;
+}
+  
+/* FOOTER */
+
+footer {
+  background-color:#6415ff;
+}
+
+.footer__row {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__nav {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  border-bottom: solid;
+  padding-bottom: 60px;
+  border-color: rgb(116 44 255);
+}
+
+.footer__nav--section {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__title {
+  color: white;
+  margin-bottom: 16px;
+}
+
+.footer__list {
+  margin: 8px 0px;
+  text-decoration: none;
+}
+
+.footer__link {
+  color: white;
+  transition: all 300ms ease;
+}
+
+.footer__link:hover {
+  text-decoration: underline;
+  text-underline-offset: 8px;
+  text-decoration-thickness: 4px;
+}
+
+.footer__logo--wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.footer__logo {
+  width: 36px;
+  margin-right: 12px;
+}
+
+.social--links {
+  margin-right: 12px;
+  padding: 8px;
+  background-color: black;
+  border-radius: 24px;
+  filter: invert(100%);
+}
+
