--- a/styles.css
+++ b/styles.css
@@ -844,10 +844,10 @@ h5 {
 /* GET STARTED */
 
 .background--container {
-  padding: 80px;
+  padding: 96px 0px;
+  margin-bottom: 4rem;
   width: 100%;
-  position:relative;
-  overflow: hidden;
+  max-width: 1280px;
   background-color: #6415ff;
   border-radius: 0.5rem;
   display: flex;
@@ -905,15 +905,15 @@ footer {
 .footer__nav {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   border-bottom: solid;
-  padding-bottom: 60px;
   border-color: rgb(116 44 255);
 }
 
 .footer__nav--section {
   display: flex;
   flex-direction: column;
+  
 }
 
 .footer__title {
@@ -923,12 +923,13 @@ footer {
 
 .footer__list {
   margin: 8px 0px;
-  text-decoration: none;
+  list-style-type: none;
 }
 
 .footer__link {
   color: white;
   transition: all 300ms ease;
+  
 }
 
 .footer__link:hover {
@@ -947,11 +948,27 @@ footer {
   margin-right: 12px;
 }
 
+.text--logo {
+  color: white;
+}
+
+.copyright--text {
+  color: #cbd5e0;
+  font-size: 16px;
+  text-align: center;
+
+}
+
 .social--links {
   margin-right: 12px;
   padding: 8px;
-  background-color: black;
   border-radius: 24px;
   filter: invert(100%);
 }
+
+.footer__links {
+  display: flex;
+  justify-content: space-between;
+  
+ }
 
