--- a/styles.css
+++ b/styles.css
@@ -996,7 +996,7 @@ footer {
   padding: 8px;
   border-radius: 24px;
   filter: invert(100%);
-  background color: white;
+  background-color: white;
 }
 
 .footer__links {
