--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,12 @@ h5 {
   display: none;
 }
 
+.mobile--nav__container {
+  display: none;
+}
+
+
+
 /* NAVIGATION */
 
 .root {
@@ -338,10 +344,21 @@ h5 {
 
 .quality__container {
   padding: 96px 0;
+  display: flex;
+  max-width: 1280px;
+  margin-left: auto;
+  margin-right: auto; 
+  align-items: center;
+  justify-content: space-between;
 }
 
 .quality__row {
   display: flex;
+  max-width: 1280px;
+  margin-left: auto;
+  margin-right: auto;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .quality__description {
@@ -1122,38 +1139,158 @@ footer {
   color: white;
   background-color: black;
 }
-
 .footer__links {
   display: flex;
   justify-content: space-between;
   margin: 64px 32px;
+  
+}
 
- }
-
- /* SMALL PHONES, TABLETS, LARGE SMARTPHONES*/
+/* SMALL PHONES, TABLETS, LARGE SMARTPHONES*/
 
 
 @media (max-width: 768px) {
-
+  
   .nav__links {
     display: none;
   }
   
-  .btn__menu {
-    display: block;
+  .nav {
+    display: none;
   }
-
+  
+  .mobile--nav__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .mobile__logo--title {
+    color: #243e63;
+    font-size: 24px;
+    font-weight: bold;
+    padding-bottom: 0.25rem;
+    transition: all 300ms ease;
+  }
+  
+  .mobile--navi__logo {
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    border-bottom-width: 0px;
+    font-weight: 900;
+    margin-left: 0px !important;
+    font-size: 1.5rem !important;
+  }
+  
+  .mobile--navi__logo--img {
+    margin-right: 0.75rem;
+    width: 2.5rem;
+  }
+  
+  .btn__menu {
+    display: flex;
+    position: relative;
+    justify-content: flex-end;
+  }
+  
   .btn__menu:hover {
     background-color: rgb(100, 11, 255);
   }
+  
+  .twocolumn__row {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+    display: flex;
+    flex-direction: column;
+  }
 
+  .twocolumn__leftcolumn {
+    max-width: 32rem;
+    text-align: center;
+    position: relative;
+    margin: 0px 96px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .logo__img {
+    max-width: 100%;
+    margin: 16px;
+    padding: 0;
+  }
+
+  .tc__header {
+    font-size: 1.875rem;
+    font-weight: 700;
+    line-height: 1.25;
+  }
+
+  .tc--para {
+    margin-top: 1.25rem;
+    margin-bottom: 1.25rem;
+    font-size: 1rem;
+  }
+
+  .tc__input {
+    padding: 20px 192px 20px 32px;
+    position: relative;
+  }
+
+  .tc__btn {
+    margin: 8px 8px 8px 0px;
+    padding: 16px 0px;
+    width: 10rem;
+    line-height: 1;
+    align-items: flex-end;
+  }
+  /*QUALITY */
+  
+  .quality__row {
+    flex-direction: row;
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+  }
+  
+  .quality__img--wrapper {
+    border-radius: 0.25rem;
+    border-width: 1px;
+  }
+  
+  .quality__title {
+    text-align: left;
+    
+  }
+  
+  /* VALUES */
+  
+  .values__info {
+    text-align: left;
+  }
+  
+  .values__small--info {
+    margin-left: 0px;
+    margin-right: 0px;
+    display: flex;
+    max-width: 20rem;
+    flex-direction: column;
+  }
+  
+  .values__small--para {
+    text-align: left;
+    margin-top: 1rem;
+    line-height: 1.625;
+  }
+  
+  /* PRICING */
+  
   .plans__container {
     flex-direction: column;
     position: relative;
     display: flex;
     align-items: center;
   }
-
+  
   .plan__container--purple {
     position: relative;
     margin-right: 2rem;
@@ -1164,5 +1301,47 @@ footer {
     max-width: 24rem;
   }
   
+  .pricing__header {
+    font-size: 3rem;
+    text-align: center;
+    font-weight: 900;
+    letter-spacing: 0.025em;
+  }
+  
+  .pricing__para {
+    font-size: 1rem;
+    margin-top: 1rem;
+    max-width: 36rem;
+    font-weight: 500;
+    line-height: 1.625;
+  }
 
+  /*GET STARTED */
+
+  .gs__row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin: 0;
+  }
+
+  .gs__link--container {
+    flex-direction: row;
+    margin-top: 1.5rem;
+    display: flex;
+    justify-content: center;
+  }
+
+  .gs__text--container {
+    max-width: 32rem;
+  }
+  
+  .gs__text {
+    font-size: 30px;
+    font-weight: 700;
+  }
+  
+  
 }
+
