--- a/styles.css
+++ b/styles.css
@@ -1241,6 +1241,7 @@ footer {
     padding: 20px 192px 20px 32px;
     width: 25rem;
     justify-content: center;
+    position: relative;
   }
 
   .tc__btn {
@@ -1356,3 +1357,28 @@ footer {
 
 }
 
+@media (max-width: 430px) {
+  .tc__input {
+   width: 100%;
+   padding-top: 1rem;
+   padding-bottom: 1rem;
+   padding-left: 2rem;
+   position: relative;
+   justify-content: center;
+   align-items: center;
+   margin: 0px;
+  }
+
+  .tc__btn {
+    display: flex;
+    margin-top: 4rem;
+    margin-bottom: 1rem;
+    margin-right: 0.5rem;
+    width: 100%;
+    line-height: 1;
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    -webkit-box-align: center;
+  }
+}
