--- a/styles.css
+++ b/styles.css
@@ -1358,6 +1358,12 @@ footer {
 }
 
 @media (max-width: 430px) {
+
+  .root {
+    min-height: 100vh;
+
+  }
+
   .tc__input {
    width: 100%;
    padding-top: 1rem;
@@ -1381,4 +1387,296 @@ footer {
     align-items: center;
     -webkit-box-align: center;
   }
-}
+
+  .twocolumn__row {
+    width: 100%;
+    align-items: center;
+  }
+
+  .features--info__heading {
+    text-align: center;
+    font-size: 2.25rem;
+    font-weight: 900;
+    letter-spacing: 0.025em;
+  }
+
+  .features--info__para {
+    margin-top: 1rem;
+    max-width: 36rem;
+    font-size: 0.875rem;
+    font-weight: 500;
+    line-height: 1.625;
+  }
+
+  /* Services */
+
+  .service--wrapper {
+    width: 100%; 
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem 0.5rem;
+    text-align: center;
+    position: relative;
+  }
+
+  .services--list {
+    display: block;
+    width: 100%;
+  }
+
+   /* QUAILTY */
+
+   .quality__row {
+    flex-direction: column-reverse;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1280px;
+   }
+
+   .quality__description {
+    margin: 4rem;
+    text-align: center;
+    font-size: 0.875rem;
+    width: 100%;
+   }
+
+   .quality__title {
+    margin-top: 1rem;
+    text-align: center;
+    font-size: 1.875rem;
+    font-weight: 900;
+    line-height: 1.25;
+    max-width: 100%;
+    letter-spacing: 0.025em;
+   }
+
+   .quality__para {
+    margin-top: 1rem;
+    text-align: center;
+    font-size: 0.875rem;
+    font-weight: 500;
+    line-height: 1.625;
+   }
+
+   .quality__container {
+    position: relative;
+   }
+
+   .quality__img--wrapper {
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    max-width: 28rem;
+   }
+
+   .quality__img {
+    max-width: 100%;
+    height: auto;
+   }
+
+   /* SERVICE */
+
+   .steps__img--wrapper {
+    position: relative;
+    margin-left: auto;
+    margin-right: auto; 
+    width: 100%;
+    max-width: 28rem;
+   }
+
+   .steps__img {
+    max-width: 100%;
+    height: auto;
+    position: relative; 
+   }
+
+   .steps--container {
+    position: relative;
+   }
+
+   .steps--wrapper {
+    width: 100%; 
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem 0.5rem;
+    text-align: center;
+    position: relative;
+   }
+
+   .steps__info {
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    text-align: center;
+   }
+
+   .steps__info--title {
+    margin-top: 1rem;
+    text-align: center;
+    font-size: 1.875rem;
+    font-weight: 900;
+    line-height: 1.25;
+    width: 100%;
+    letter-spacing: 0.025em;
+   }
+
+   .steps__list {
+    display: block;
+    margin-top: 3rem;
+    width: 100%;
+   }
+
+   .steps__lists {
+    margin-top: 2rem;
+    padding: 0px;
+    list-style: none;
+    width: 100%;
+    align-items: center;
+    flex-direction: column;
+    display: flex;
+   }
+  /* VALUES*/
+  .values--wrapper {
+    width: 100%; 
+    display: flex;
+    height: 100%;
+    flex-direction: column-reverse;
+    align-items: center;
+    padding: 2rem 0.5rem;
+    text-align: center;
+    position: relative;
+  }
+
+  .values__img--wrapper {
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    max-width: 28rem;
+  }
+
+  .values__img {
+    max-width: 100%;
+    height: auto;
+    position: relative; 
+  }
+
+   .values__info--title {
+    margin-top: 1rem;
+    text-align: center;
+    font-size: 1.875rem;
+    line-height: 1.25;
+   }
+
+   .values__info {
+    text-align: center;
+    width: 100%;
+    align-items: center;
+   }
+
+   .values__info--para {
+    margin-top: 1rem;
+    text-align: center;
+    font-size: 0.875rem;
+    font-weight: 500;
+    line-height: 1.625;
+   }
+
+   .values__small--container {
+    margin-right: 0px;
+    margin-top: 2.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+   }
+
+   /*TESTIMONIALS*/
+
+   .testimonials--wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: space-between;
+  }
+
+  .test__img--wrapper {
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    max-width: 28rem;
+  }
+
+  .testimonials__info--title {
+    margin-top: 1rem;
+    text-align: center;
+    font-size: 1.875rem;
+    font-weight: 900;
+    line-height: 1.25;
+  }
+
+  .testimonials__info {
+    width: 100%;
+    align-items: center;
+  }
+
+  /*GS BANNER*/
+
+  .gs__row {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .gs__link--container {
+    width: 100%;
+    margin-top: 1.5rem;
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+  }
+
+  .cs__btn {
+    margin-top: 1rem;
+    width: 100%;
+  }
+
+  .gs__btn {
+    width: 100%;
+    margin-top: 0px;
+  }
+
+  .gs__text--container {
+    font-size: 1.5rem;
+    width: 100%;
+    font-weight: 700;
+  }
+
+  .footer__nav {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .footer__nav--section {
+    margin-top: 3rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+} 
